--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+*, *::before,*::after{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin: 0;
+  background: #272727;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calci-grid{
+  padding: 5% 0;
+  display: grid;
+  margin-top: 2rem;
+  grid-template-columns: repeat(4, 6rem);
+  grid-template-rows: minmax(7rem, auto) repeat(5, 5rem);
+  justify-content: center;
+  filter: drop-shadow(0px 4px 30px #121212);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.span-two{
+  grid-column: span 2;
+}
+
+.output{
+  grid-column:  1 / -1;
+  background-color: #444444;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
+  justify-content: space-around;
+  padding: .75rem;
+  word-wrap: break-word;
+  word-break: break-all;
+  border-radius: 25px;
+  margin-bottom: 10px;
+}
+.output .previous-operand{
+  color: #e28f00;
+  font-size: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.output .current-operand{
+  color: #fff;
+  font-size: 2.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calci-grid > button{
+  cursor: pointer;
+  font-size: 2rem;
+  border: 1px solid #272727;
+  outline: none;
+  background-color: #fff;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+}
+.calci-grid > button:hover,
+.calci-grid > button:focus{
+  background-color: #d3d3d3;
+  border-radius: 15px;
+}
+#ans{
+  background-color: #ffba43;
+}
+#ans:hover,
+#ans:focus{
+  background-color: #e28f00;
+  color: #fff;
+}
+
+#ac:hover{
+  background-color: #23d3ff;
+  color: #fff;
+}
+#del:hover{
+  background-color: #ff2323;
+  color: #fff;
 }
