--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body{
   grid-template-rows: minmax(7rem, auto) repeat(5, 5rem);
   justify-content: center;
   filter: drop-shadow(0px 4px 30px #121212);
+  color: #272727;
 }
 
 .span-two{
